--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "rules": {
       "no-shadow": "off",
       "no-param-reassign": "off",
+      "import/prefer-default-export": "off",
       "eol-last": "off",
       "import/extensions": [ 1, {
         "js": "always", "json": "always"
