Add final style to the project

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
     "extends": ["airbnb-base"],
     "rules": {
       "no-shadow": "off",
+      "eqeqeq": "off",
       "no-param-reassign": "off",
       "import/prefer-default-export": "off",
       "eol-last": "off",
